--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@nextui-org/react": "^2.2.9",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
