feat: add some toasts and complete layout of landing page

--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.18.0",
+    "tailwindcss-animated": "^1.0.1",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.142",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
+    "@types/node": "^20.10.4",
     "@types/react": "^18.2.15",
     "@types/react-datepicker": "^4.19.3",
     "@types/react-dom": "^18.2.7",
