fix: adjust styles and remove redundant code

--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,8 @@
 {
   "hosting": {
+    "site": "colorful-days",
     "source": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "frameworksBackend": {
       "region": "asia-east1"
     }
