--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/modifiers": "^7.0.0",
     "@nextui-org/react": "^2.2.9",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
