--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -49,6 +50,7 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "unplugin-icons": "^0.17.4",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vitest": "^1.1.0"
   }
 }
